FIX CARD OVERFLOW =================== Fix text input causing scroll bar on question card.

--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -32,7 +32,7 @@ input[type="text"]{
     margin: 10px 0;
     font-family: inherit;
     font-size: 100%;
-    padding: 20px;
+    padding: 20px 3%;
 }
 
 .card {
